--- a/ref-selected.bib
+++ b/ref-selected.bib
@@ -34,9 +34,9 @@
   author    = {Luc André and Stéphane Martin and Gérald Oster and Claudia-Lavinia Ignat},
   title     = {Supporting Adaptable Granularity of Changes for Massive-Scale Collaborative Editing},
   booktitle = {International Conference on Collaborative Computing: Networking, Applications and Worksharing - CollaborateCom 2013},
-  year      = 2013, 
+  year      = 2013,
   pages     = {50--59},
-  month     = oct, 
+  month     = oct,
   publisher = {IEEE Computer Society},
   address   = {Austin, TX, USA},
   doi       = {none},
@@ -52,6 +52,25 @@
   month =        oct,
   publisher =    {Springer},
   doi =          {10.1007/978-3-642-24550-3_29},
+}
+
+@inproceedings{nicolas:hal-01655438,
+  TITLE = {{MUTE: A Peer-to-Peer Web-based Real-time Collaborative Editor}},
+  AUTHOR = {Nicolas, Matthieu and Elvinger, Victorien and Oster, G{\'e}rald and Ignat, Claudia-Lavinia and Charoy, Fran{\c c}ois},
+  URL = {https://hal.inria.fr/hal-01655438},
+  BOOKTITLE = {{ECSCW 2017 - 15th European Conference on Computer-Supported Cooperative Work}},
+  ADDRESS = {Sheffield, United Kingdom},
+  PUBLISHER = {{EUSSET}},
+  SERIES = {Proceedings of 15th European Conference on Computer-Supported Cooperative Work - Panels, Posters and Demos},
+  VOLUME = {1},
+  NUMBER = {3},
+  PAGES = {1-4},
+  YEAR = {2017},
+  MONTH = Aug,
+  DOI = {10.18420/ecscw2017\_p5},
+  PDF = {https://hal.inria.fr/hal-01655438/file/Nicolasetal2017.pdf},
+  HAL_ID = {hal-01655438},
+  HAL_VERSION = {v1},
 }
 
 @inproceedings{DangIoP16,
@@ -123,7 +142,7 @@
   url       = {http://doi.acm.org/10.1145/2034691.2034717},
   publisher = {ACM Press},
   month     = sep
-} 
+}
 
 @article{BangerterCS03,
   author  = {Adrian Bangerter and Herbert H. Clark},
@@ -172,12 +191,12 @@
   OPT_address	= {Hillsdale, N. J.}
 }
 
-@article{ClarkJML04, 
-  author   = {Herbert H. Clark and Meredyth A. Krych}, 
+@article{ClarkJML04,
+  author   = {Herbert H. Clark and Meredyth A. Krych},
   title    = {Speaking while Monitoring Addresses for Understanding},
   journal  = {Journal of Memory and Language},
-  volume   = {50}, 
-  pages    = {62--81}, 
+  volume   = {50},
+  pages    = {62--81},
   year     = 2004
 }
 
@@ -251,19 +270,19 @@
   doi       = {10.1016/j.chb.2004.10.038},
   publisher = {Elsevier Science Publishers B. V.},
   address   = {Amsterdam, The Netherlands, The Netherlands},
-} 
+}
 
 @article{GibsonSPQ2010,
-  author    = {David R. Gibson}, 
+  author    = {David R. Gibson},
   title     = {Marking the Turn: Obligation, Engagement, and Alienation in Group Discussions},
-  volume    = {73}, 
-  number    = {2}, 
-  pages     = {132--151}, 
-  year      = 2010, 
-  doi       = {10.1177/0190272510371456}, 
-  url       = {http://spq.sagepub.com/content/73/2/132.abstract}, 
-  eprint    = {http://spq.sagepub.com/content/73/2/132.full.pdf+html}, 
-  journal   = {Social Psychology Quarterly} 
+  volume    = {73},
+  number    = {2},
+  pages     = {132--151},
+  year      = 2010,
+  doi       = {10.1177/0190272510371456},
+  url       = {http://spq.sagepub.com/content/73/2/132.abstract},
+  eprint    = {http://spq.sagepub.com/content/73/2/132.full.pdf+html},
+  journal   = {Social Psychology Quarterly}
 }
 
 @inproceedings{GrahamCollabCom06,
@@ -307,16 +326,16 @@
 }
 
 @article{HayesWC12,
-  author    = {John R. Hayes}, 
+  author    = {John R. Hayes},
   title     = {Modeling and Remodeling Writing},
   journal   = {Written Communication},
-  volume    = {29}, 
-  number    = {3}, 
-  pages     = {369--388}, 
-  year      = 2012, 
-  doi       = {10.1177/0741088312451260}, 
-  url       = {http://wcx.sagepub.com/content/29/3/369.abstract}, 
-  eprint    = {http://wcx.sagepub.com/content/29/3/369.full.pdf+html}, 
+  volume    = {29},
+  number    = {3},
+  pages     = {369--388},
+  year      = 2012,
+  doi       = {10.1177/0741088312451260},
+  url       = {http://wcx.sagepub.com/content/29/3/369.abstract},
+  eprint    = {http://wcx.sagepub.com/content/29/3/369.full.pdf+html},
 }
 
 @article{IgnatJCSCW08,
@@ -359,7 +378,7 @@
   url       = {http://doi.acm.org/10.1145/302979.303160},
   publisher = {ACM},
   address   = {Pittsburgh, PA, USA},
-} 
+}
 
 @article{LandauerPR97,
   author   = {Thomas K Landauer and Susan T. Dumais},
@@ -436,7 +455,7 @@
   pages     = {36--45},
   doi       = {10.1109/ICDE.1998.655755},
   url       = {http://doi.ieeecomputersociety.org/10.1109/ICDE.1998.655755},
-} 
+}
 
 @article{SunTOCHI98,
   author    = {Chengzheng Sun and Xiaohua Jia and Yanchun Zhang and Yun Yang and David Chen},
@@ -477,7 +496,7 @@
   month     = feb,
   pages     = {70--83},
   doi       = {10.1177/0018720811424896},
-  url       = {http://dx.doi.org/10.1177/0018720811424896},  
+  url       = {http://dx.doi.org/10.1177/0018720811424896},
   publisher = {SAGE Publications},
 }
 
