feat: Add CAP theorem and Antidote as references

--- a/ref-selected.bib
+++ b/ref-selected.bib
@@ -73,6 +73,19 @@
   HAL_VERSION = {v1},
 }
 
+@misc{BrewerPoDC2000,
+  title = {{Towards Robust Distributed Systems}},
+  author = {Brewer, Eric},
+  year = {2000},
+  url = {https://people.eecs.berkeley.edu/~brewer/cs262b-2004/PODC-keynote.pdf}
+}
+
+@misc{Antidote,
+  title = {{AntidoteDB: A planet-scale, available, transactional database with strong semantics.}},
+  author = {The SyncFree Consortium},
+  url = {http://antidoteDB.eu/}
+}
+
 @inproceedings{DangIoP16,
   author    = {Quang Vinh Dang and Claudia-Lavinia Ignat},
   title     = {{Performance of Real-time Collaborative Editors at Large Scale: User Perspective}},
