--- a/research-statement/main.tex
+++ b/research-statement/main.tex
@@ -124,11 +124,15 @@ Nevertheless, it requires the network layer to keep track of the defined partial
 % - Several constraints may exist on identifiers: globally unique, belonging to a dense set
 % - Implementations (literature ?) do not provide identifiers with fixed size: depend on number of nodes...
 
-In both designs, to achieve convergence, \acp{CRDT} proposed in the literature mostly rely on identifiers to reference updated elements.
-To be globally unique, element identifiers often include the identifier of the node which generates them.
-But, since node identifiers grow as new nodes join the system, element identifiers grow proportionally.
-Furthermore, element identifiers have to comply to additional constraints according to the \ac{CRDT}, for example forming a dense set.
-This usually results in an acceleration of their growth.
+To achieve convergence, \emph{State-based} and \emph{Operations-based} \acp{CRDT} proposed in the literature mostly rely on identifiers to reference updated elements.
+In order to identify an element, identifiers have to be themselves globally unique.
+To do so, element identifiers often include the identifier of the node which generates them as well as a node logical clock.
+Thus, according to how are generated node identifiers, the size of element identifiers increases with the number of nodes.
+% To be globally unique, element identifiers often include the identifier of the node which generates them.
+% But, since node identifiers grow as new nodes join the system, element identifiers grow proportionally.
+Furthermore, element identifiers have to comply to additional constraints according to the \ac{CRDT}, for example forming a dense set\cite{AndreCollaborateCom2013}.
+In this case, element identifiers size increases according to the number of elements contained in the data structure.
+Thus, the size of element identifiers is usually not bounded.
 
 % First, identifiers are required to be globally unique for the lifetime of the data structure.
 % For example, they may also be used to represent the order between updates.
@@ -140,7 +144,7 @@ This usually results in an acceleration of their growth.
 % - How can we provide renaming mechanisms reducing the size of identifiers at some point?
 
 Hence, since the size of identifiers is not bounded, the size of metadata attached to each element increases over time.
-It thus exceeds more and more the size of data itself.
+It exceeds more and more the size of data itself.
 This impedes the adoption of \acp{CRDT} since nodes have to broadcast and store metadata, causing the application's performances and efficiency to decrease over time.
 
 This PhD aims to address this issue by
