--- a/research-statement/ref-selected.bib
+++ b/research-statement/ref-selected.bib
@@ -98,6 +98,25 @@
   publisher = {{IEEE Computer Society}},
 }
 
+@article{Prakash:1997:ACO:255495.255508,
+ author = {Prakash, Ravi and Raynal, Michel and Singhal, Mukesh},
+ title = {An Adaptive Causal Ordering Algorithm Suited to Mobile Computing Environments},
+ journal = {J. Parallel Distrib. Comput.},
+ issue_date = {March 15, 1997},
+ volume = {41},
+ number = {2},
+ month = mar,
+ year = {1997},
+ issn = {0743-7315},
+ pages = {190--204},
+ numpages = {15},
+ url = {http://dx.doi.org/10.1006/jpdc.1996.1300},
+ doi = {10.1006/jpdc.1996.1300},
+ acmid = {255508},
+ publisher = {Academic Press, Inc.},
+ address = {Orlando, FL, USA},
+}
+
 @inproceedings{DemersPODC87,
   author = {Alan Demers and Dan Greene and Carl Hauser and Wes Irish and John Larson and Scott Shenker and Howard Sturgis and Dan Swinehart and Doug Terry},
   title = {{Epidemic Algorithms for Replicated Database Maintenance}},
