feat: Add "Education" section

--- a/resume/deedy_resume-openfont.tex
+++ b/resume/deedy_resume-openfont.tex
@@ -188,6 +188,14 @@ L'objectif de ce stage était de réaliser un outil permettant de vérifier auto
 \sectionsep\xdef\tpd{\the\prevdepth}
 \end{minipage}
 
+\section{EDUCATION}
+
+\runsubsection{Diplomed engineer from TELECOM Nancy, French Grande Ecole}
+\descript{}
+\location{Equivalent to a Master Degree in Computer Science}
+\location{September 2011 – August 2014 | Nancy}
+\sectionsep
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     COMMUNICATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
