refactor: Small changes

--- a/resume/deedy_resume-openfont.tex
+++ b/resume/deedy_resume-openfont.tex
@@ -85,11 +85,11 @@
 
 \runsubsection{Research \& Development Software Engineer}
 \descript{| INRIA, COAST TEAM}
-\location{September 2014 – June 2017 | Nancy}
+\location{September 2014 – September 2017 | Nancy}
 \sectionsep
 
 \hfill\begin{minipage}{\dimexpr\textwidth-0.5cm}
-\descript{Project OpenPaaS::NG}
+\descript{PROJECT OPENPAAS::NG}
 The goal of this project is to design a  open-source entreprise social network providing a suite of
 peer-to-peer collaborative office applications.
 The aim is to offer a reliable and free alternative to existing solutions such as Google Apps.
@@ -120,13 +120,13 @@ the demonstration platform of the team.
 \href{http://people.irisa.fr/Martin.Quinson/Teaching/PLM/}{\customboldlink{The PLM}}
 is a open-source programming exerciser.
 Developped by Gérald Oster and Martin Quinson, this application proposes to students
-to explore and to learn several concepts of the algorithmics through interactive exercises.
+to explore and to learn several concepts of the algorithmics through interactive and graphical exercises.
 \\
 The goal of this project was to enhance this tool in an experimental platform dedicated
 to the teaching of computer science.
 To achieve this, a usage data collecting mechanism was required in order to generate a dataset.
 This dataset, made available to researchers, allows the realisation of research works on topics
-such as the design of an automatic helping tool tailoring error messages to students.
+such as the design of an automatic helping tool which tailors error messages to students.
 A second objective of this project was to port the application, until then released as
 a heavy Java software, into a web application to make it available to the greatest number.
 \\
@@ -135,7 +135,7 @@ This major change of paradigm introduced several problematics which needed to be
 \begin{tightemize}
     \item Implementation and testing of the usage data collecting mechanism
     \item Conception and integration of a distributed architecture ensuring the scalability of the application
-    \item Isolation of the execution of student code
+    \item Isolation of the execution of student code using containers
     \item Deployment and monitoring of a multi-components application
 \end{tightemize}
 \sectionsep\xdef\tpd{\the\prevdepth}
@@ -202,11 +202,11 @@ L'objectif de ce stage était de réaliser un outil permettant de vérifier auto
 
 \section{Communication}
 
-\runsubsection{Presentations on MUTE}
+\runsubsection{Presentations about MUTE}
 \descript{}
 \vspace{5pt}
 \begin{tabular}{cp{150mm}}
-August - September 2017    & ECSCW 2017\\
+August 2017         & ECSCW 2017\\
 December 2016       & HCERES Evaluation of the LORIA\\
                     & Inria Industry Meeting "New technologies to protect digital data and computer systems"\\
                     & Visit of a delegation of Technological University presidents from Mexico\\
@@ -216,7 +216,7 @@ October 2016        & Evaluation seminar of INRIA teams working on "Distributed 
 \sectionsep
 \sectionsep
 
-\runsubsection{Presentations on PLM}
+\runsubsection{Presentations about PLM}
 \descript{}
 \vspace{5pt}
 \begin{tabular}{cl}
