feat: Add part on internship at Polytechnique

--- a/resume/deedy_resume-openfont.tex
+++ b/resume/deedy_resume-openfont.tex
@@ -85,7 +85,7 @@
 
 \runsubsection{Research \& Development Software Engineer}
 \descript{| INRIA, COAST TEAM}
-\location{September 2014 – September 2017 | Nancy}
+\location{September 2014 – September 2017 | Nancy, France}
 \sectionsep
 
 \hfill\begin{minipage}{\dimexpr\textwidth-0.5cm}
@@ -166,24 +166,22 @@ ma tâche a été de concevoir et de développer un éditeur collaboratif temps 
 \sectionsep\xdef\tpd{\the\prevdepth}
 \end{minipage}
 
-\runsubsection{Élève-technicien}
-\descript{| IUT de Metz}
-\location{DUT Informatique}
-\location{Septembre 2009 – Juin 2011 | Metz}
+\runsubsection{Intern}
+\descript{| POLYTECHNIQUE MONTRÉAL}
+\location{September 2009 – June 2011 | Montreal, Canada}
 \sectionsep
 
 \hfill\begin{minipage}{\dimexpr\textwidth-0.5cm}
-\descript{Developpement d’un outil d'analyse d'algorithmes d'edition collaborative | École Polytechnique de Montreal}
-\location{Stage | Avril 2011 – Juin 2011 | Montréal, Canada}
-Les outils d'édition collaborative existants reposent majoritairement sur une famille spécifique d'algorithmes
-pour assurer le maintien de la cohérence à terme : les transformées opérationnelles.
+\descript{Development of a tool to check the correctness of collaborative editing algorithms}
+Existing collaborative editing tools relies mostly on a specific family of algorithms
+to ensure the eventual consistency of copies : the operational transformation.
 \\
-Deux propriétés de convergence \emph{TP1} et \emph{TP2} existent et permettent de garantir la correction de ces algorithmes.
+Two consistency properties \emph{TP1} and \emph{TP2} are defined and allow to ensure the correctness of algorithms from this family.
 \\
-L'objectif de ce stage était de réaliser un outil permettant de vérifier automatiquement le respect de ces propriétés pour un algorithme donné.
+The goal of this internship was to develop a tool to automatically check the respect of these properties for a given algorithm.
 \begin{tightemize}
-\item Implémentation de plusieurs algorithmes issus de la famille des transformées opérationnelles
-\item Développement de l'outil permettant de vérifier les propriétés de convergences \emph{TP1} et \emph{TP2} pour les algorithmes implémentés.
+\item Implementation of several algorithms from the operational transformation family
+\item Development of the tool allowing to check if the algorithms ensure \emph{TP1} and \emph{TP2}
 \end{tightemize}
 \sectionsep\xdef\tpd{\the\prevdepth}
 \end{minipage}
@@ -193,7 +191,7 @@ L'objectif de ce stage était de réaliser un outil permettant de vérifier auto
 \runsubsection{Diplomed engineer from TELECOM Nancy, French Grande Ecole}
 \descript{}
 \location{Equivalent to a Master Degree in Computer Science}
-\location{September 2011 – August 2014 | Nancy}
+\location{September 2011 – August 2014 | Nancy, France}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
