feat: Add part on internship at LORIA

--- a/resume/deedy_resume-openfont.tex
+++ b/resume/deedy_resume-openfont.tex
@@ -141,27 +141,24 @@ This major change of paradigm introduced several problematics which needed to be
 \sectionsep\xdef\tpd{\the\prevdepth}
 \end{minipage}
 
-\runsubsection{Élève-ingénieur}
-\descript{| TELECOM Nancy}
-\location{Diplôme d'ingénieur TELECOM Nancy, spécialité Ingénierie du Logiciel }
-\location{Septembre 2011 – Août 2014 | Nancy}
+\runsubsection{Intern}
+\descript{| UNIVERSITY OF LORRAINE, COAST TEAM}
+\location{April 2011 – August 2014 | Nancy, France}
 \sectionsep
 
 \hfill\begin{minipage}{\dimexpr\textwidth-0.5cm}
-\descript{Realisation d’une plateforme d’edition collaborative | LORIA, equipe COAST}
-\location{Stage | Avril 2014 – Août 2014 | Nancy}
-Issue des travaux sur l'édition collaborative, une nouvelle famille d'algorithmes de réplication des données
-et de maintien de la cohérence à terme est apparue récemment : l'approche CRDT (Conflict-free Replicated Data Type).
-Cette nouvelle famille d'algorithme répond à plusieurs des limites constatées chez les autres approches existantes,
-notamment concernant la capacité de passage à l'échelle.
+\descript{Design of a collaborative editing tool}
+Coming from the research on collaborative editing, a new family of data replication and consistency maintenance algorithms
+was recently formalised : the Conflict-Free Replicated Data Types (CRDTs) approach.
+This new family addresses several unresolved issues from other approaches, especially its scalability.
 \\
-L'équipe SCORE, travaillant sur ce domaine de recherche, a proposé un nouvel algorithme de cette famille : \emph{LogootSplit}.
+The COAST team proposed a new algorithm from this family : \emph{LogootSplit}.
 \\
-Afin d'illustrer et de mettre en valeur les travaux de l'équipe sur cette approche,
-ma tâche a été de concevoir et de développer un éditeur collaboratif temps réel se basant sur cet algorithme.
+In order to illustrate and highlight the team's works on this new approach,
+my task was to design and implement a new real time collaborative editing tool based on this algorithm.
 \begin{tightemize}
-\item Implémentation sous forme de librairie de \emph{LogootSplit}
-\item Conception et développement de \href{https://www.coedit.re}{\customboldlink{MUTE}}, un éditeur collaboratif temps réel en ligne reposant sur cette librairie
+\item Implementation of \emph{LogootSplit} as a library
+\item Design and development of \href{https://www.coedit.re}{\customboldlink{MUTE}}, a real time collaborative editing web app using this library
 \end{tightemize}
 \sectionsep\xdef\tpd{\the\prevdepth}
 \end{minipage}
